// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider[Base] should render correctly  1`] = `
<div
  class="c-g4vmes soui-slider-wrapper"
>
  <div
    class="cg1thok soui-slider-track"
  >
    <div
      class="c2d8stu soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 50%;"
    >
      <div
        class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        50
      </div>
    </div>
  </div>
  <div
    class="c-1nyc34 soui-slider-scale-wrapper"
  >
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        100
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about disabled 1`] = `
<div
  class="c-g4vmes soui-slider-wrapper c-z5jhy5 soui-slider-disabled"
>
  <div
    class="cg1thok soui-slider-track"
  >
    <div
      class="c2d8stu soui-slider-track-inner"
      dir="ltr"
      style="left: 25%; right: 25%;"
    >
      <div
        class="c-wxfego soui-slider-indicator c-brjvt2 soui-slider-indicator-start"
        dir="ltr"
      />
      <div
        class="cse2gra soui-slider-start-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        25
      </div>
      <div
        class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        75
      </div>
    </div>
  </div>
  <div
    class="c-1nyc34 soui-slider-scale-wrapper"
  >
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        100
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about format 1`] = `
<div
  class="c-g4vmes soui-slider-wrapper"
>
  <div
    class="cg1thok soui-slider-track"
  >
    <div
      class="c2d8stu soui-slider-track-inner"
      dir="ltr"
      style="left: 6.111111111111112%; right: 60%;"
    >
      <div
        class="c-wxfego soui-slider-indicator c-brjvt2 soui-slider-indicator-start"
        dir="ltr"
      />
      <div
        class="cse2gra soui-slider-start-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        09:33
      </div>
      <div
        class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        12:36
      </div>
    </div>
  </div>
  <div
    class="c-1nyc34 soui-slider-scale-wrapper"
  >
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        09:00
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        10:00
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        11:00
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        12:00
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        13:00
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        14:00
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        15:00
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        16:00
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        17:00
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        18:00
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about hider all 1`] = `
<div
  class="c-g4vmes soui-slider-wrapper"
>
  <div
    class="cg1thok soui-slider-track"
  >
    <div
      class="c2d8stu soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 96%;"
    >
      <div
        class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
        dir="ltr"
      />
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about hider auto 1`] = `
<div
  class="c-g4vmes soui-slider-wrapper c-fuhhmw soui-slider-auto-hide"
>
  <div
    class="cg1thok soui-slider-track"
  >
    <div
      class="c2d8stu soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 75%;"
    >
      <div
        class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        4
      </div>
    </div>
  </div>
  <div
    class="c-1nyc34 soui-slider-scale-wrapper"
  >
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        1
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        2
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        3
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        5
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        8
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        13
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        21
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        34
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        55
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        89
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        144
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about increase 1`] = `
<div>
  <div
    class="c-g4vmes soui-slider-wrapper"
    style="margin-bottom: 24px;"
  >
    <div
      class="cg1thok soui-slider-track"
    >
      <div
        class="c2d8stu soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 50%;"
      >
        <div
          class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          50
        </div>
      </div>
    </div>
    <div
      class="c-1nyc34 soui-slider-scale-wrapper"
    >
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-g4vmes soui-slider-wrapper"
  >
    <div
      class="cg1thok soui-slider-track"
    >
      <div
        class="c2d8stu soui-slider-track-inner"
        dir="ltr"
        style="left: 20%; right: 50%;"
      >
        <div
          class="c-wxfego soui-slider-indicator c-brjvt2 soui-slider-indicator-start"
          dir="ltr"
        />
        <div
          class="cse2gra soui-slider-start-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          20
        </div>
        <div
          class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          50
        </div>
      </div>
    </div>
    <div
      class="c-1nyc34 soui-slider-scale-wrapper"
    >
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about input 1`] = `
<div
  style="display: flex; align-items: center;"
>
  <div
    class="c-g4vmes soui-slider-wrapper"
    style="flex: 1; margin-inline-end: 28px;"
  >
    <div
      class="cg1thok soui-slider-track"
    >
      <div
        class="c2d8stu soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 50%;"
      >
        <div
          class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          50
        </div>
      </div>
    </div>
    <div
      class="c-1nyc34 soui-slider-scale-wrapper"
    >
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-q0dhk soui-input-wrapper-number c-gfs6ep soui-input-wrapper"
    data-soui-input-border="true"
    style="width: 100px;"
  >
    <div
      class="czg51j8 soui-input-wrapper-inner-title-top cgcogm4 soui-input-wrapper-inner-title-bottom chzktt5 soui-input-wrapper-padding-box c-r36uff soui-input-content"
    >
      <input
        class="c33d3uu soui-input-input"
        type="text"
        value="50"
      />
    </div>
    <div
      class="c-pnx8lj soui-input-number-step"
    >
      <span>
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
      <span>
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about range 1`] = `
<div
  class="c-g4vmes soui-slider-wrapper"
>
  <div
    class="cg1thok soui-slider-track"
  >
    <div
      class="c2d8stu soui-slider-track-inner"
      dir="ltr"
      style="left: 25%; right: 25%;"
    >
      <div
        class="c-wxfego soui-slider-indicator c-brjvt2 soui-slider-indicator-start"
        dir="ltr"
      />
      <div
        class="cse2gra soui-slider-start-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        25
      </div>
      <div
        class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        75
      </div>
    </div>
  </div>
  <div
    class="c-1nyc34 soui-slider-scale-wrapper"
  >
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        100
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about scale 1`] = `
<div
  class="c-g4vmes soui-slider-wrapper"
>
  <div
    class="cg1thok soui-slider-track"
  >
    <div
      class="c2d8stu soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 100%;"
    >
      <div
        class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        0
      </div>
    </div>
  </div>
  <div
    class="c-1nyc34 soui-slider-scale-wrapper"
  >
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        10
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        100
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        250
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        500
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        1000
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about step 1`] = `
<div
  class="c-g4vmes soui-slider-wrapper"
>
  <div
    class="cg1thok soui-slider-track"
  >
    <div
      class="c2d8stu soui-slider-track-inner"
      dir="ltr"
      style="left: 5%; right: 75%;"
    >
      <div
        class="c-wxfego soui-slider-indicator c-brjvt2 soui-slider-indicator-start"
        dir="ltr"
      />
      <div
        class="cse2gra soui-slider-start-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        0.05
      </div>
      <div
        class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        0.25
      </div>
    </div>
  </div>
  <div
    class="c-1nyc34 soui-slider-scale-wrapper"
  >
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about step zero 1`] = `
<div
  class="c-g4vmes soui-slider-wrapper"
>
  <div
    class="cg1thok soui-slider-track"
  >
    <div
      class="c2d8stu soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 100%;"
    >
      <div
        class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
        dir="ltr"
      >
        0.8
      </div>
    </div>
  </div>
  <div
    class="c-1nyc34 soui-slider-scale-wrapper"
  >
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        0.8
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        1
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        1.2
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        1.4
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        1.7
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        2
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        2.4
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        2.8
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        3.3
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        4
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        4.8
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        5.6
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        6.7
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        8
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        9.5
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        11
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        13
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        16
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about value hover 1`] = `
<div
  class="c-g4vmes soui-slider-wrapper"
>
  <div
    class="cg1thok soui-slider-track"
  >
    <div
      class="c2d8stu soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 50%;"
    >
      <div
        class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end c-bxoe0c soui-slider-indicator-hover"
        dir="ltr"
      />
      <div
        class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value cgyo0oi soui-slider-value-hover"
        dir="ltr"
      >
        50
      </div>
    </div>
  </div>
  <div
    class="c-1nyc34 soui-slider-scale-wrapper"
  >
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="cg104hv soui-slider-scale"
    >
      <div
        class="cfx4ay5 soui-slider-label"
        dir="ltr"
      >
        100
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about virtual 1`] = `
<div>
  <div
    class="c-g4vmes soui-slider-wrapper c-1f1okj soui-slider-vertical"
    style="height: 200px;"
  >
    <div
      class="cg1thok soui-slider-track"
    >
      <div
        class="c2d8stu soui-slider-track-inner"
        dir="ltr"
        style="bottom: 0%; top: 50%;"
      >
        <div
          class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          50
        </div>
      </div>
    </div>
    <div
      class="c-1nyc34 soui-slider-scale-wrapper"
    >
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-g4vmes soui-slider-wrapper c-1f1okj soui-slider-vertical"
    style="height: 200px;"
  >
    <div
      class="cg1thok soui-slider-track"
    >
      <div
        class="c2d8stu soui-slider-track-inner"
        dir="ltr"
        style="bottom: 12%; top: 30.000000000000004%;"
      >
        <div
          class="c-wxfego soui-slider-indicator c-brjvt2 soui-slider-indicator-start"
          dir="ltr"
        />
        <div
          class="cse2gra soui-slider-start-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          12
        </div>
        <div
          class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          70
        </div>
      </div>
    </div>
    <div
      class="c-1nyc34 soui-slider-scale-wrapper"
    >
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-g4vmes soui-slider-wrapper c-1f1okj soui-slider-vertical"
    style="height: 200px;"
  >
    <div
      class="cg1thok soui-slider-track"
    >
      <div
        class="c2d8stu soui-slider-track-inner"
        dir="ltr"
        style="bottom: 0%; top: 77.5%;"
      >
        <div
          class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
          dir="ltr"
        />
      </div>
    </div>
    <div
      class="c-1nyc34 soui-slider-scale-wrapper"
    >
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          0℃
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          20℃
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          40℃
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          60℃
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          100℃
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-g4vmes soui-slider-wrapper c-fuhhmw soui-slider-auto-hide c-1f1okj soui-slider-vertical"
    style="height: 200px;"
  >
    <div
      class="cg1thok soui-slider-track"
    >
      <div
        class="c2d8stu soui-slider-track-inner"
        dir="ltr"
        style="bottom: 12%; top: 30.000000000000004%;"
      >
        <div
          class="c-wxfego soui-slider-indicator c-brjvt2 soui-slider-indicator-start"
          dir="ltr"
        />
        <div
          class="cse2gra soui-slider-start-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          12
        </div>
        <div
          class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          70
        </div>
      </div>
    </div>
    <div
      class="c-1nyc34 soui-slider-scale-wrapper"
    >
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-g4vmes soui-slider-wrapper c-z5jhy5 soui-slider-disabled c-1f1okj soui-slider-vertical"
    style="height: 200px;"
  >
    <div
      class="cg1thok soui-slider-track"
    >
      <div
        class="c2d8stu soui-slider-track-inner"
        dir="ltr"
        style="bottom: 12%; top: 30.000000000000004%;"
      >
        <div
          class="c-wxfego soui-slider-indicator c-brjvt2 soui-slider-indicator-start"
          dir="ltr"
        />
        <div
          class="cse2gra soui-slider-start-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          12
        </div>
        <div
          class="c-wxfego soui-slider-indicator cxe9sqb soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-b8scsj soui-slider-end-value cg2mgoa soui-slider-value"
          dir="ltr"
        >
          70
        </div>
      </div>
    </div>
    <div
      class="c-1nyc34 soui-slider-scale-wrapper"
    >
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="cg104hv soui-slider-scale"
      >
        <div
          class="cfx4ay5 soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
</div>
`;
